# Face_Countinuous_Anthentication

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/facecontinuousauthentication/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/facecontinuousauthentication/: ExampleUnitTest.java
bankingapp/: build.gradle.kts
bankingapp/src/main/: AndroidManifest.xml
bankingapp/src/main/java/com/example/bankingapp/: FaceAdapter.java  FaceDatabaseActivity.java  FaceItem.java  FaceVerifyActivity.java  MainActivity.java  RegisterActivity.java  ScoreChartActivity.java
bankingapp/src/main/res/layout/: activity_face_database.xml  activity_face_verify.xml  activity_register.xml  activity_score_chart.xml  face_grid_item.xml
bankingapp/src/main/res/values/: themes.xml
faceauth/: build.gradle.kts
faceauth/src/androidTest/java/com/example/faceauth/: ExampleInstrumentedTest.java
faceauth/src/main/: AndroidManifest.xml
faceauth/src/main/cpp/: CMakeLists.txt  arcface.cpp  arcface.h  arcface_jni.cpp
faceauth/src/main/java/com/example/faceauth/: CameraXWrapper.java  DummyLifecycleOwner.java  FaceAuthService.java  FaceProcessor.java  FaceRecognizer.java
gradle/wrapper/: gradle-wrapper.properties
